@@ -30,6 +30,7 @@ Cacti CHANGELOG
 -issue#4866: Using ${var} in strings is deprecated, use {$var} instead in file
 -issue#4867: In Graph Management, filtering for "Device: None" shows all graphs
 -issue#4871: Realtime popup window experiences issues on some browsers
+-issue#4873: Correct Settings-->Authentication fields visible status
 -feature#4820: Make it possible to only import certain components when importing packages
 -feature#4825: Add update_device.php script to cli folder
 -feature#4827: Move all Help pages to docs.cacti.net if the page is reachable
